rectified contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -245,8 +245,8 @@ textarea {
 button[type="submit"] {
   margin-top: 20px;
   padding: 12px 20px;
-  background-color: #007BFF;
-  color: white;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -255,7 +255,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: var(--secondary-color);
 }
 
 form p {
